@@ -4,12 +4,11 @@ import static com.snowflake.kafka.connector.streaming.iceberg.sql.PrimitiveJsonR
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.snowflake.kafka.connector.Utils;
 import com.snowflake.kafka.connector.records.RecordService.SnowflakeTableRow;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
@@ -17,8 +16,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-class IcebergTableStreamingRecordMapperTest {
-  private static final ObjectMapper objectMapper = new ObjectMapper();
+class IcebergTableStreamingRecordMapperTest extends StreamingRecordMapperTest {
 
   private static final ImmutableMap<String, Object> primitiveJsonAsMap =
       ImmutableMap.of(
@@ -38,25 +36,6 @@ class IcebergTableStreamingRecordMapperTest {
           0.25,
           "approval",
           true);
-
-  private static final String fullMetadataJsonExample =
-      "{"
-          + "\"offset\": 10,"
-          + "\"topic\": \"topic\","
-          + "\"partition\": 0,"
-          + "\"key\": \"key\","
-          + "\"schema_id\": 1,"
-          + "\"key_schema_id\": 2,"
-          + "\"CreateTime\": 3,"
-          + "\"LogAppendTime\": 4,"
-          + "\"SnowflakeConnectorPushTime\": 5,"
-          + "\"headers\": {\"objectAsJsonStringHeader\": {"
-          + "\"key1\": \"value1\","
-          + "\"key2\": \"value2\""
-          + "},"
-          + "\"header2\": \"testheaderstring\","
-          + "\"header3\": 3.5}"
-          + "}";
 
   private static final Map<String, Object> fullMetadataJsonAsMap =
       ImmutableMap.of(
@@ -94,7 +73,7 @@ class IcebergTableStreamingRecordMapperTest {
       throws JsonProcessingException {
     // When
     IcebergTableStreamingRecordMapper mapper =
-        new IcebergTableStreamingRecordMapper(objectMapper, true);
+        new IcebergTableStreamingRecordMapper(objectMapper, true, false);
     Map<String, Object> result = mapper.processSnowflakeRecord(row, true);
 
     // Then
@@ -107,11 +86,14 @@ class IcebergTableStreamingRecordMapperTest {
       throws JsonProcessingException {
     // When
     IcebergTableStreamingRecordMapper mapper =
-        new IcebergTableStreamingRecordMapper(objectMapper, false);
+        new IcebergTableStreamingRecordMapper(objectMapper, false, false);
     IcebergTableStreamingRecordMapper mapperSchematization =
-        new IcebergTableStreamingRecordMapper(objectMapper, true);
+        new IcebergTableStreamingRecordMapper(objectMapper, true, false);
+    IcebergTableStreamingRecordMapper ssv2Mapper =
+        new IcebergTableStreamingRecordMapper(objectMapper, false, true);
     Map<String, Object> result = mapper.processSnowflakeRecord(row, true);
     Map<String, Object> resultSchematized = mapperSchematization.processSnowflakeRecord(row, true);
+    Map<String, Object> resultSSv2 = ssv2Mapper.processSnowflakeRecord(row, true);
 
     // Then
     assertThat(result.get(Utils.TABLE_COLUMN_METADATA)).isEqualTo(expected);
@@ -121,13 +103,13 @@ class IcebergTableStreamingRecordMapperTest {
   @Test
   void shouldSkipMapMetadata() throws JsonProcessingException {
     // Given
-    SnowflakeTableRow row = buildRow(primitiveJsonExample);
+    SnowflakeTableRow row = buildRowWithDefaultMetadata(primitiveJsonExample);
 
     // When
     IcebergTableStreamingRecordMapper mapper =
-        new IcebergTableStreamingRecordMapper(objectMapper, false);
+        new IcebergTableStreamingRecordMapper(objectMapper, false, false);
     IcebergTableStreamingRecordMapper mapperSchematization =
-        new IcebergTableStreamingRecordMapper(objectMapper, true);
+        new IcebergTableStreamingRecordMapper(objectMapper, true, false);
     Map<String, Object> result = mapper.processSnowflakeRecord(row, false);
     Map<String, Object> resultSchematized = mapperSchematization.processSnowflakeRecord(row, false);
 
@@ -143,7 +125,7 @@ class IcebergTableStreamingRecordMapperTest {
       throws JsonProcessingException {
     // When
     IcebergTableStreamingRecordMapper mapper =
-        new IcebergTableStreamingRecordMapper(objectMapper, false);
+        new IcebergTableStreamingRecordMapper(objectMapper, false, false);
     Map<String, Object> result = mapper.processSnowflakeRecord(row, true);
 
     // Then
@@ -154,26 +136,26 @@ class IcebergTableStreamingRecordMapperTest {
     return Stream.of(
         Arguments.of(
             "Empty JSON",
-            buildRow("{}"),
+            buildRowWithDefaultMetadata("{}"),
             ImmutableMap.of(Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Simple JSON",
-            buildRow("{\"key\": \"value\"}"),
+            buildRowWithDefaultMetadata("{\"key\": \"value\"}"),
             ImmutableMap.of(
                 "\"KEY\"", "value", Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Already quoted key JSON",
-            buildRow("{\"\\\"key\\\"\": \"value\"}"),
+            buildRowWithDefaultMetadata("{\"\\\"key\\\"\": \"value\"}"),
             ImmutableMap.of(
                 "\"key\"", "value", Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Already quoted UPPERCASE key JSON",
-            buildRow("{\"\\\"KEY\\\"\": \"value\"}"),
+            buildRowWithDefaultMetadata("{\"\\\"KEY\\\"\": \"value\"}"),
             ImmutableMap.of(
                 "\"KEY\"", "value", Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "JSON with different primitive types",
-            buildRow(primitiveJsonExample),
+            buildRowWithDefaultMetadata(primitiveJsonExample),
             ImmutableMap.of(
                 "\"ID_INT8\"",
                 8,
@@ -195,30 +177,31 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested array",
-            buildRow("{\"key\": [" + primitiveJsonExample + ", " + primitiveJsonExample + "]}"),
+            buildRowWithDefaultMetadata(
+                "{\"key\": [" + primitiveJsonExample + ", " + primitiveJsonExample + "]}"),
             ImmutableMap.of(
                 "\"KEY\"",
-                ImmutableList.of(primitiveJsonAsMap, primitiveJsonAsMap),
+                List.of(primitiveJsonAsMap, primitiveJsonAsMap),
                 Utils.TABLE_COLUMN_METADATA,
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Empty nested array",
-            buildRow("{\"key\": []}"),
+            buildRowWithDefaultMetadata("{\"key\": []}"),
             ImmutableMap.of(
-                "\"KEY\"", ImmutableList.of(), Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
+                "\"KEY\"", List.of(), Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Empty object",
-            buildRow("{\"key\": {}}"),
+            buildRowWithDefaultMetadata("{\"key\": {}}"),
             ImmutableMap.of(
                 "\"KEY\"", ImmutableMap.of(), Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested object",
-            buildRow("{\"key\":" + primitiveJsonExample + "}"),
+            buildRowWithDefaultMetadata("{\"key\":" + primitiveJsonExample + "}"),
             ImmutableMap.of(
                 "\"KEY\"", primitiveJsonAsMap, Utils.TABLE_COLUMN_METADATA, fullMetadataJsonAsMap)),
         Arguments.of(
             "Double nested object",
-            buildRow("{\"key\":{\"key2\":" + primitiveJsonExample + "}}"),
+            buildRowWithDefaultMetadata("{\"key\":{\"key2\":" + primitiveJsonExample + "}}"),
             ImmutableMap.of(
                 "\"KEY\"",
                 ImmutableMap.of("key2", primitiveJsonAsMap),
@@ -226,7 +209,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested objects and primitive types",
-            buildRow(
+            buildRowWithDefaultMetadata(
                 primitiveJsonExample.replaceFirst("}", "")
                     + ",\"key\":"
                     + primitiveJsonExample
@@ -256,7 +239,7 @@ class IcebergTableStreamingRecordMapperTest {
 
   private static Stream<Arguments> prepareMetadataData() throws JsonProcessingException {
     return Stream.of(
-        Arguments.of("Full metadata", buildRow("{}"), fullMetadataJsonAsMap),
+        Arguments.of("Full metadata", buildRowWithDefaultMetadata("{}"), fullMetadataJsonAsMap),
         Arguments.of(
             "Empty metadata", buildRow("{}", "{}"), ImmutableMap.of("headers", ImmutableMap.of())),
         Arguments.of(
@@ -285,7 +268,7 @@ class IcebergTableStreamingRecordMapperTest {
     return Stream.of(
         Arguments.of(
             "Empty JSON",
-            buildRow("{}"),
+            buildRowWithDefaultMetadata("{}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of(),
@@ -293,7 +276,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Simple JSON",
-            buildRow("{\"key\": \"value\"}"),
+            buildRowWithDefaultMetadata("{\"key\": \"value\"}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of("key", "value"),
@@ -301,7 +284,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "UPPERCASE key JSON",
-            buildRow("{\"KEY\": \"value\"}"),
+            buildRowWithDefaultMetadata("{\"KEY\": \"value\"}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of("KEY", "value"),
@@ -309,7 +292,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "JSON with different primitive types",
-            buildRow(primitiveJsonExample),
+            buildRowWithDefaultMetadata(primitiveJsonExample),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 primitiveJsonAsMap,
@@ -317,23 +300,24 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested array",
-            buildRow("{\"key\": [" + primitiveJsonExample + ", " + primitiveJsonExample + "]}"),
+            buildRowWithDefaultMetadata(
+                "{\"key\": [" + primitiveJsonExample + ", " + primitiveJsonExample + "]}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
-                ImmutableMap.of("key", ImmutableList.of(primitiveJsonAsMap, primitiveJsonAsMap)),
+                ImmutableMap.of("key", List.of(primitiveJsonAsMap, primitiveJsonAsMap)),
                 Utils.TABLE_COLUMN_METADATA,
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Empty nested array",
-            buildRow("{\"key\": []}"),
+            buildRowWithDefaultMetadata("{\"key\": []}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
-                ImmutableMap.of("key", ImmutableList.of()),
+                ImmutableMap.of("key", List.of()),
                 Utils.TABLE_COLUMN_METADATA,
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Empty object",
-            buildRow("{\"key\": {}}"),
+            buildRowWithDefaultMetadata("{\"key\": {}}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of("key", ImmutableMap.of()),
@@ -341,7 +325,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested object",
-            buildRow("{\"key\":" + primitiveJsonExample + "}"),
+            buildRowWithDefaultMetadata("{\"key\":" + primitiveJsonExample + "}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of("key", primitiveJsonAsMap),
@@ -349,7 +333,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Double nested object",
-            buildRow("{\"key\":{\"key2\":" + primitiveJsonExample + "}}"),
+            buildRowWithDefaultMetadata("{\"key\":{\"key2\":" + primitiveJsonExample + "}}"),
             ImmutableMap.of(
                 Utils.TABLE_COLUMN_CONTENT,
                 ImmutableMap.of("key", ImmutableMap.of("key2", primitiveJsonAsMap)),
@@ -357,7 +341,7 @@ class IcebergTableStreamingRecordMapperTest {
                 fullMetadataJsonAsMap)),
         Arguments.of(
             "Nested objects and primitive types",
-            buildRow(
+            buildRowWithDefaultMetadata(
                 primitiveJsonExample.replaceFirst("}", "")
                     + ",\"key\":"
                     + primitiveJsonExample
@@ -387,16 +371,5 @@ class IcebergTableStreamingRecordMapperTest {
     map.put(key, value);
     map.put(key2, value2);
     return map;
-  }
-
-  private static SnowflakeTableRow buildRow(String content) throws JsonProcessingException {
-    return buildRow(content, fullMetadataJsonExample);
-  }
-
-  private static SnowflakeTableRow buildRow(String content, String metadata)
-      throws JsonProcessingException {
-    return new SnowflakeTableRow(
-        new SnowflakeRecordContent(objectMapper.readTree(content)),
-        objectMapper.readTree(metadata));
   }
 }
